#+TITLE: Change Log

* Unreleased

- Fixed =parinfer--plist2alist= used before it is defined
- Removed the half-complete One mode
- Inserting double quote does what I mean (hopefully)
- Strategies:
  - paredit commands always use the default strategy; the =paredit= extension just adds bindings now
  - =newline= and =evil-delete-char= unambiguously trigger reindent / paren update instantly
  - =self-insert-command=, =evil-join=, =indent-for-tab-command= trigger reindent / paren update instantly
  - Parinfer is triggered after inserting a double quote
    - Previously because we're in a string the new paren isn't added

* kisaragi-0.5.0

- Dropped Emacs 24 support
- Start time has been cut by 50% as indent now only runs once
- Extensions are now represented by just one function instead of many
  - For example, instead of =parinfer-ext::one:mount= and =parinfer-ext::one:unmount=, now it is just =parinfer-ext::one=
- The /evil/ extension only assigned strategies to Evil commands. The assignment is now done without needing to enable an extension.
- User options are now exposed in the Customize interface
- The option to switch to indent mode automatically after inserting closing parens now works
  - Set =parinfer-auto-switch-indent-mode= to =closing= to enable this. The separate =parinfer-auto-switch-indent-mode-when-closing= variable has been removed.

* v0.4.0
- bugfix.
- remove ~company~ extension, instead add ~defaults~.
- improve ~smart-tab~.
- short document.

* v0.3.2
- bugfix.
- ~smart-tab~ extension.

* v0.3.1
- bugfix.
- ~smart-yank~ extension.

* v0.3.0
- bugfix.
- Refactor code.
- Extension module.

* v0.2.0
- Add ~parinfer-skip-command-list~, ~parinfer-skip-command-prefix-list~, ~parinfer-instantly-invoke-command-list~, ~parinfer-instantly-invoke-command-prefix-list~.
- Compatibility with Evil.
- BUGFIX: Broken ~Package-Requires~.

* v0.1.4